Allow campaign code field to be edited when adding campaigns

--- a/frontend/src/templates/CampaignForm.html
+++ b/frontend/src/templates/CampaignForm.html
@@ -2,7 +2,7 @@
     <div layout="column" layout-padding>
         <h5>Details</h5>
         <md-input-container>
-            <label>Code</label><input type="text" id="code" name="code" ng-model="campaign.code" ng-required="true" disabled>
+            <label>Code</label><input type="text" id="code" name="code" ng-model="campaign.code" ng-required="true" ng-disabled="editing">
         </md-input-container>
 
         <md-input-container>
