--- a/frontend/sass/main.sass
+++ b/frontend/sass/main.sass
@@ -42,3 +42,10 @@ md-tabs
 .add-button
   color: #191E80
   cursor: pointer
+
+md-toolbar.membership
+  background-color: rgb(187, 58, 127)
+
+md-toolbar
+  transition: background-color 0.5s
+  transition-delay: 0.2s
