- Few more layout tweaks. - Icon hyperlinks for (existing) promo code landing pages.

--- a/frontend/sass/main.sass
+++ b/frontend/sass/main.sass
@@ -47,5 +47,11 @@ md-toolbar.membership
   background-color: rgb(187, 58, 127)
 
 md-toolbar
+  cursor: pointer
   transition: background-color 0.5s
   transition-delay: 0.2s
+  text-transform: capitalize
+
+md-icon > a
+  color: inherit
+  text-decoration: none
