--- a/frontend/src/templates/ChannelCodes.html
+++ b/frontend/src/templates/ChannelCodes.html
@@ -17,7 +17,8 @@
 
                 <div>
                     <md-input-container ng-repeat="code in channel.codes track by $index" class="code-container">
-                        <label for="code">Code</label>
+                        <md-icon md-font-set="material-icons" md-menu-align-target><a target="_blank" href="https://{{ productDomain }}/p/{{ channel.codes[$index] }}">open_in_browser</a></md-icon>
+                        <label for="code">Promo Code</label>
                         <input type="text" id="code" ng-model="channel.codes[$index]" ng-change="ctrl.codeUpdated(channels, channel.name, channel.codes[$index])">
                     </md-input-container>
                     <md-button class="md-fab md-mini" aria-label="Add code" ng-click="ctrl.addCode(channels, channel.name)" ng-show="channel.codes.length < 10">
