--- a/frontend/src/templates/PromotionForm.html
+++ b/frontend/src/templates/PromotionForm.html
@@ -1,30 +1,31 @@
-<form name="promotionForm" ng-cloak>
-    <div layout="column" layout-padding>
+<form name="promotionForm" ng-cloak layout-padding>
+    <div layout="column">
 
-        <div layout="column">
-            <h5>Campaign</h5>
-            <span>{{ promotion.campaignCode }} — {{ promotion.campaignName }}</span>
-        </div>
-
-        <h4>Promotion Details</h4>
+        <h3>Promotion Details</h3>
 
         <md-input-container>
-            <label>Name</label><input name="name" ng-model="promotion.name" required>
+            <label>Campaign</label><input ng-disabled="true" type="text" value="{{ promotion.campaignCode }} — {{ promotion.campaignName }}"/>
+        </md-input-container>
+
+        <md-input-container>
+            <label>Name</label><input name="name" ng-model="promotion.name" required/>
         </md-input-container>
 
         <md-input-container>
             <label>Description</label><textarea ng-model="promotion.description" name="description" rows="3" required></textarea>
         </md-input-container>
 
+        <promotion-type promotion="promotion"></promotion-type>
         <rate-plan-list product-rate-plan-ids="promotion.appliesTo.productRatePlanIds" product="environment.product"></rate-plan-list>
         <available-countries countries="promotion.appliesTo.countries"></available-countries>
-        <channel-codes codes="promotion.codes"></channel-codes>
-        <promotion-type promotion="promotion"></promotion-type>
         <promotion-dates promotion="promotion"></promotion-dates>
+        <channel-codes codes="promotion.codes"></channel-codes>
 
         <landing-page landing-page="promotion.landingPage"></landing-page>
+
         <div>
             <md-button ng-click="ctrl.save(promotion)" class="md-raised md-primary">Update</md-button>
         </div>
+
     </div>
 </form>
