Removed unnecessary toLowerCase as CSS manages title case.

--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -21,7 +21,7 @@
         <div class="md-toolbar-tools">
           <span environment-menu></span>
           <h2 class="md-clickable">
-            <span ui-sref="allPromotions.chooseCampaign">{{environment.product}} Promotions ({{environment.stage.toLowerCase()}})</span>
+            <span ui-sref="allPromotions.chooseCampaign">{{environment.product}} Promotions ({{environment.stage}})</span>
           </h2>
           <span flex></span>
         </div>
