--- a/frontend/sass/main.sass
+++ b/frontend/sass/main.sass
@@ -18,10 +18,6 @@
   left: 0
   right: 0
 
-.mdl-textfield.mdl-textfield__short
-  padding-bottom: 0
-  padding-top: 0
-
 md-tabs
   border: 1px solid #e1e1e1
 
@@ -55,3 +51,6 @@ md-toolbar
 md-icon > a
   color: inherit
   text-decoration: none
+
+.promotion-code-list
+  max-width: 90%
