Grid image selector

--- a/frontend/sass/main.sass
+++ b/frontend/sass/main.sass
@@ -4,6 +4,8 @@
   z-index: 2
   position: fixed
   background-color: white
+  box-shadow: 1px 1px 3px #333
+  overflow: hidden
   left: 20%
   right: 20%
   bottom: 20%
@@ -57,3 +59,13 @@ md-icon > a
 
 .promotion-code-list
   max-width: 90%
+
+.landing-page-image
+  background-color: #EEEEEE
+  background-position: middle middle
+  background-size: cover
+  margin-bottom: 20px
+  text-align: center
+  height: 500px
+  color: #777
+
