--- a/frontend/sass/main.sass
+++ b/frontend/sass/main.sass
@@ -52,5 +52,8 @@ md-icon > a
   color: inherit
   text-decoration: none
 
+.promotion-list-item
+  max-width: 100%
+
 .promotion-code-list
   max-width: 90%
