Support prepopulation of grid images & scrolling

--- a/frontend/src/templates/GridImageSelector.html
+++ b/frontend/src/templates/GridImageSelector.html
@@ -1,5 +1,5 @@
-<modal show="show">
-    <iframe src="https://media.test.dev-gutools.co.uk" height="1200px" width="100%" style="border: none"></iframe>
+<modal show="show" product="product">
+    <iframe ng-src="{{gridUrl}}" height="1200px" width="100%" style="border: none"></iframe>
 </modal>
 
 <div class="landing-page-image landing-page-image-placeholder"
