--- a/frontend/src/templates/PromotionForm.html
+++ b/frontend/src/templates/PromotionForm.html
@@ -22,7 +22,7 @@
             <promotion-dates promotion="promotion"></promotion-dates>
             <channel-codes codes="promotion.codes"></channel-codes>
 
-            <landing-page landing-page="promotion.landingPage"></landing-page>
+            <landing-page landing-page="promotion.landingPage" product="environment.product"></landing-page>
 
             <div>
                 <md-button ng-click="ctrl.update(promotion)" class="md-raised md-primary">Update</md-button>
