--- a/frontend/src/templates/Modal.html
+++ b/frontend/src/templates/Modal.html
@@ -1,6 +1,6 @@
 <div class="modal__backdrop" ng-show="show" ng-click="show = !show"></div>
 <div class="modal" layout="column" flex ng-show="show">
-    <md-toolbar ng-class="environment.product">
+    <md-toolbar ng-class="product">
         <div class="md-toolbar-tools">
             <h2>The Grid</h2>
             <span flex></span>
