--- a/frontend/sass/main.sass
+++ b/frontend/sass/main.sass
@@ -62,10 +62,12 @@ md-icon > a
 
 .landing-page-image
   background-color: #EEEEEE
-  background-position: middle middle
+  background-position: middle middle;
+  border: 1px solid #ccc
   background-size: cover
   margin-bottom: 20px
   text-align: center
+  cursor: pointer
   height: 500px
   color: #777
 
