Fix the iframe height being wonky

--- a/frontend/src/templates/PromotionForm.html
+++ b/frontend/src/templates/PromotionForm.html
@@ -32,6 +32,6 @@
         </form>
     </div>
     <div layout="column" flex="50">
-        <iframe refreshable-iframe refreshable-src="https://{{ productDomain }}/q/{{ promotion.uuid }}" style="width: 100%; height: 100%" frameborder="0"></iframe>
+        <iframe flex refreshable-iframe refreshable-src="https://{{ productDomain }}/q/{{ promotion.uuid }}" frameborder="0"></iframe>
     </div>
 </div>
