Initial work towards JSON preview

--- a/frontend/sass/main.sass
+++ b/frontend/sass/main.sass
@@ -1,4 +1,5 @@
 @import "../node_modules/angular-material/angular-material.scss"
+@import "../node_modules/angular-resizable/angular-resizable.min.scss"
 
 .modal
   z-index: 2
