- Ordered the rate plans in a logical way - Layout tweaks to section colour selector, preview and save buttons - Tweaked toolbar colour for subs

--- a/frontend/sass/main.sass
+++ b/frontend/sass/main.sass
@@ -41,14 +41,17 @@ md-tabs
   color: #191E80
   cursor: pointer
 
-md-toolbar.membership
-  background-color: rgb(187, 58, 127)
-
 md-toolbar
   cursor: pointer
   transition: background-color 0.5s
   transition-delay: 0.2s
   text-transform: capitalize
+
+md-toolbar.digitalpack
+  background-color: #00456e
+
+md-toolbar.membership
+  background-color: rgb(187, 58, 127)
 
 md-icon > a
   color: inherit
