--- a/frontend/src/templates/PromotionForm.html
+++ b/frontend/src/templates/PromotionForm.html
@@ -1,5 +1,5 @@
 <div layout="row" layout-align=" stretch" flex ng-cloak>
-    <div layout-padding style="border-right: 1px solid #BBB; overflow: auto" layout-align="stretch" resizable r-directions="['bottom', 'right']" r-flex="true">
+    <div layout-padding style="border-right: 1px solid #BBB; overflow: auto" layout-align="stretch" flex="50">
         <form name="promotionForm">
             <div layout="column">
                 <h3>Promotion Details</h3>
@@ -31,6 +31,6 @@
         </form>
     </div>
     <div layout="column" flex>
-        <preview-promotion promotion="promotion"></preview-promotion>
+        <preview-promotion layout="column" flex promotion="promotion"></preview-promotion>
     </div>
 </div>
