--- a/frontend/src/templates/PromotionDates.html
+++ b/frontend/src/templates/PromotionDates.html
@@ -1,8 +1,12 @@
-<div layout="column">
+<ng-form name="dates" layout="column">
     <h5>Duration</h5>
     <div>
-        <md-datepicker aria-label="Start date" ng-model="promotion.starts" md-placeholder="Start date"></md-datepicker>
+            <md-datepicker aria-label="Start date" name="starts" ng-model="promotion.starts" md-placeholder="Start date" ng-required="true"></md-datepicker>
+            <div ng-messages="dates.starts.$error" role="alert" class="date-error">
+                <ng-message when="required">Please enter a start date</ng-message>
+            </div>
+
         <md-datepicker ng-show="promotion.expires" aria-label="Expiry date" ng-model="promotion.expires" md-placeholder="Expiry date" delete-empty></md-datepicker>
         <md-button ng-show="!promotion.expires" ng-click="ctrl.addExpiryDate()">Add expiry</md-button>
     </div>
-</div>
+</ng-form>
