Show errors when you hit submit

--- a/frontend/src/templates/PromotionDates.html
+++ b/frontend/src/templates/PromotionDates.html
@@ -2,7 +2,7 @@
     <h5>Duration</h5>
     <div>
             <md-datepicker aria-label="Start date" name="starts" ng-model="promotion.starts" md-placeholder="Start date" ng-required="true"></md-datepicker>
-            <div ng-messages="dates.starts.$error" role="alert" class="date-error">
+            <div ng-messages="dates.starts.$error" role="alert" class="small-error small-error-date">
                 <ng-message when="required">Please enter a start date</ng-message>
             </div>
 
