--- a/frontend/sass/main.sass
+++ b/frontend/sass/main.sass
@@ -82,14 +82,17 @@ md-icon > a
 .save-button
   margin-top: 20px
 
-.date-error
+.small-error
   transition-property: opacity
   transition-delay: 0.2s
   transition-duration: 5s
-  margin-left: 63px
   line-height: 14px
   font-size: 12px
   color: red
+
+.small-error-date
+  margin-left: 63px
+
 
 .server-error
   background-color: rgb(255,82,82)
