Show better errors

--- a/frontend/src/templates/PromotionForm.html
+++ b/frontend/src/templates/PromotionForm.html
@@ -36,7 +36,7 @@
                 </section>
 
                 <div class="server-error" ng-if="serverErrors.length">
-                    Internal server error while saving promotion, the following fields are missing:
+                    Internal server error while saving promotion:
                     <ul><li ng-repeat="err in serverErrors">{{err}}</li></ul>
                     Please send this report to a developer.
                 </div>
