Membership common 212 + non landing page promos

--- a/frontend/src/templates/PromotionForm.html
+++ b/frontend/src/templates/PromotionForm.html
@@ -24,7 +24,7 @@
                 <available-countries countries="promotion.appliesTo.countries"></available-countries>
                 <promotion-dates promotion="promotion"></promotion-dates>
                 <channel-codes codes="promotion.codes"></channel-codes>
-                <landing-page landing-page="promotion.landingPage" product="environment.product"></landing-page>
+                <landing-page promotion="promotion" product="environment.product"></landing-page>
 
                 <section layout="row" layout-align="end center" layout-wrap>
                     <div layout="column" layout-align="center center">
