--- a/frontend/src/templates/LandingPage.html
+++ b/frontend/src/templates/LandingPage.html
@@ -1,21 +1,28 @@
 <ng-form layout="column">
     <h4>Landing page</h4>
-    <md-input-container>
-        <label>Title</label><input name="title" ng-model="landingPage.title" delete-empty>
-    </md-input-container>
-    <md-input-container>
-        <label>Description</label><input name="landing-description" ng-model="landingPage.description" delete-empty>
-    </md-input-container>
-    <md-input-container>
-        <label>Roundel HTML</label><input name="roundel-html" ng-model="landingPage.roundelHtml" delete-empty>
-    </md-input-container>
 
-    <grid-image-selector landing-page="landingPage"></grid-image-selector>
+    <md-checkbox aria-label="Does this promo have a landing page" ng-checked="promotion.landingPage !== undefined" ng-click="ctrl.toggleBackup(promotion, backup)">
+        This promotion has a landing page
+    </md-checkbox>
 
-    <h5>Subs stripe colour</h5>
-    <md-radio-group layout="row" ng-model="landingPage.sectionColour">
-        <md-radio-button value="blue" class="md-primary">Blue</md-radio-button>
-        <md-radio-button value="grey">Grey</md-radio-button>
-        <md-radio-button value="white">White</md-radio-button>
-    </md-radio-group>
+    <div layout="column" ng-show="promotion.landingPage !== undefined">
+        <md-input-container>
+            <label>Title</label><input name="title" ng-model="promotion.landingPage.title" delete-empty>
+        </md-input-container>
+        <md-input-container>
+            <label>Description</label><input name="landing-description" ng-model="promotion.landingPage.description" delete-empty>
+        </md-input-container>
+        <md-input-container>
+            <label>Roundel HTML</label><input name="roundel-html" ng-model="promotion.landingPage.roundelHtml" delete-empty>
+        </md-input-container>
+
+        <grid-image-selector landing-page="promotion.landingPage"></grid-image-selector>
+
+        <h5>Subs stripe colour</h5>
+        <md-radio-group layout="row" ng-model="promotion.landingPage.sectionColour">
+            <md-radio-button value="blue" class="md-primary">Blue</md-radio-button>
+            <md-radio-button value="grey">Grey</md-radio-button>
+            <md-radio-button value="white">White</md-radio-button>
+        </md-radio-group>
+    </div>
 </ng-form>
