--- a/frontend/src/templates/PromotionType.html
+++ b/frontend/src/templates/PromotionType.html
@@ -34,7 +34,7 @@
         </md-tab>
 
         <!-- Percent discounts -->
-        <md-tab label="Discount" ng-click="ctrl.setPromotionType('discount')">
+        <md-tab label="Discount" ng-click="ctrl.setPromotionType('percent_discount')">
             <md-content class="md-padding md-tab-content">
                 <md-input-container class="md-block" flex-gt-sm>
                     <label>Duration (months)</label>
