--- a/frontend/src/templates/PromotionForm.html
+++ b/frontend/src/templates/PromotionForm.html
@@ -43,7 +43,5 @@
             </div>
         </form>
     </div>
-    <div layout="column" flex>
-        <preview-promotion layout="column" flex promotion="promotion" validity="promotionForm.$valid"></preview-promotion>
-    </div>
+    <preview-promotion flex layout="column" promotion="promotion" validity="promotionForm.$valid"></preview-promotion>
 </div>
